--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-INF/Semestralka 1/
+INF1/Semestralka 1/
 UŠ/Lunar Lander Ady/
 UŠ/Lunar Lander Git/
 *.jar
@@ -6,3 +6,4 @@ UŠ/Lunar Lander Git/
 *.ctxt
 UŠ/UDS_utorok_16-00_TaxiCabs.zip
 INF/StudentAdamChobot.frip2
+INF1/TestBot1/
